[gd_scene load_steps=3 format=3 uid="uid://c7lmt5cp7bxcm"]

[ext_resource type="Script" path="res://addons/dialogic/Editor/Common/reference_manager.gd" id="1_3tomk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkp0w"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(1, 1, 1, 1)

[node name="Control" type="PanelContainer"]
self_modulate = Color(0.113725, 0.133333, 0.160784, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hkp0w")
script = ExtResource("1_3tomk")

[node name="VBoxContainer" type="VSplitContainer" parent="."]
layout_mode = 2

[node name="ChangeList" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="VBoxContainer/ChangeList"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "(Possibly) Broken Reference Manager"

[node name="Label" type="Label" parent="VBoxContainer/ChangeList"]
layout_mode = 2
text = "These things have been renamed and might be broken in timelines:"
autowrap_mode = 3

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/ChangeList"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChangeTree" type="Tree" parent="VBoxContainer/ChangeList/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/draw_relationship_lines = 1
columns = 3
hide_root = true

[node name="Label" type="Label" parent="VBoxContainer/ChangeList/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
text = "Because dialogics timelines are pure text files, it can often happen that references break. 

This manager allows you to fix broken references by replacing them. 

Note: Items that weren't found are automatically removed from the list when closing this window."
autowrap_mode = 3

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/ChangeList"]
layout_mode = 2
alignment = 1

[node name="CheckButton2" type="Button" parent="VBoxContainer/ChangeList/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Reference"

[node name="CheckButton" type="Button" parent="VBoxContainer/ChangeList/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Check for References"

[node name="FindList" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/FindList"]
layout_mode = 2
text = "Found references:"

[node name="ReferenceTree" type="Tree" parent="VBoxContainer/FindList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/draw_relationship_lines = 1
columns = 2
hide_root = true

[node name="SearchProgress" type="ProgressBar" parent="VBoxContainer/FindList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="VBoxContainer/FindList"]
layout_mode = 2
alignment = 2

[node name="State" type="Label" parent="VBoxContainer/FindList/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "State"

[node name="Back" type="Button" parent="VBoxContainer/FindList/HBox"]
visible = false
layout_mode = 2
text = "Back"

[node name="Replace" type="Button" parent="VBoxContainer/FindList/HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Replace"

[connection signal="button_clicked" from="VBoxContainer/ChangeList/HSplitContainer/ChangeTree" to="." method="_on_change_tree_button_clicked"]
[connection signal="item_edited" from="VBoxContainer/ChangeList/HSplitContainer/ChangeTree" to="." method="_on_change_tree_item_edited"]
[connection signal="pressed" from="VBoxContainer/ChangeList/HBox/CheckButton2" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ChangeList/HBox/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FindList/HBox/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="VBoxContainer/FindList/HBox/Replace" to="." method="_on_replace_pressed"]
